--- a/app/views/home/_guide.html.erb
+++ b/app/views/home/_guide.html.erb
@@ -1,188 +1,12 @@
 <h2 class="text-2xl mb-4 text-black">使い方ガイド</h2>
 
 <div class="guide-sections w-11/12 max-w-2xl mb-8" data-controller="before-home-accordion">
-  <div class="guide-item border border-black rounded-lg overflow-hidden mb-3 last:mb-0">
-    <div class="guide-header flex justify-between items-center p-4 bg-white text-black text-lg font-bold cursor-pointer hover:bg-gray-100 transition-colors duration-300" data-action="click->before-home-accordion#toggle">
-      Googleログインしよう！
-      <span class="arrow transition-transform duration-300">&#9660;</span>
-    </div>
-    <div class="guide-content p-6 bg-gray-50 border-t border-gray-200" data-before-home-accordion-target="content" style="display:none;">
-      <div class="flex flex-col md:flex-row items-center gap-6">
-        <div class="flex-1 text-gray-700 text-left">
-          <p class="m-0">まずは、Googleログインを行いましょう。
-          ログイン後は右図のように、<br>
-          ストーリー一覧ページへ移ります。<br>
-          <br>
-          ※ 画像をクリックして拡大</p>
-        </div>
-        <div class="flex-1">
-          <%= link_to "#", data: { 
-                action: "click->image-viewer#open", 
-                image_viewer_src_param: image_path('guide-login.png') 
-              } do %>
-            <%= image_tag 'guide-login.png', class: 'w-full rounded-lg shadow-md border cursor-pointer hover:opacity-80 transition-opacity' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="guide-item border border-black rounded-lg overflow-hidden mb-3 last:mb-0">
-    <div class="guide-header flex justify-between items-center p-4 bg-white text-black text-lg font-bold cursor-pointer hover:bg-gray-100 transition-colors duration-300" data-action="click->before-home-accordion#toggle">
-      ストーリーを作成しよう！
-      <span class="arrow transition-transform duration-300">&#9660;</span>
-    </div>
-    <div class="guide-content p-6 bg-gray-50 border-t border-gray-200" data-before-home-accordion-target="content" style="display:none;">
-      <div class="flex flex-col md:flex-row items-center gap-6">
-        <div class="flex-1 text-gray-700 text-left">
-          <p class="m-0">
-            ○ ページ右上にある「ストーリー作成」ボタンから、物語を作成しましょう。<br>
-            <br>
-            ○ ストーリーを作成すると、右図のように詳細ページに移ります。<br>
-            <br>
-            ○ 各要素のタブよりその要素のページに移れます。今回は「ワールドガイド」をクリックしましょう。<br>
-            <br>
-            ※ 画像をクリックして拡大
-          </p>
-        </div> 
-        <div class="flex-1">
-          <%= link_to "#", data: { 
-                action: "click->image-viewer#open", 
-                image_viewer_src_param: image_path('guide-create-story.png')
-              } do %>
-            <%= image_tag 'guide-create-story.png', class: 'w-full rounded-lg shadow-md border cursor-pointer hover:opacity-80 transition-opacity' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="guide-item border border-black rounded-lg overflow-hidden mb-3 last:mb-0">
-    <div class="guide-header flex justify-between items-center p-4 bg-white text-black text-lg font-bold cursor-pointer hover:bg-gray-100 transition-colors duration-300" data-action="click->before-home-accordion#toggle">
-      ワールドガイドを作成しよう！
-      <span class="arrow transition-transform duration-300">&#9660;</span>
-    </div>
-    <div class="guide-content p-6 bg-gray-50 border-t border-gray-200" data-before-home-accordion-target="content" style="display:none;">
-      <div class="flex flex-col md:flex-row items-center gap-6">
-        <div class="flex-1 text-gray-700 text-left">
-          <p class="m-0">
-            ○ 「ワールドガイド」ではそのストーリーの世界観となる要素を管理できます。
-            追加ボタンを押すことで作成することが可能です。<br>
-            <br>
-            ○ 右図のように作成済みの要素は<br>
-            クリックすることで詳細確認できます。<br>
-            <br>
-            ★ 特徴は複数設定することができます。複数設定することで詳細な世界観を作り上げましょう。<br>
-            <br>
-            ※ 画像をクリックして拡大
-          </p>
-        </div> 
-        <div class="flex-1">
-          <%= link_to "#", data: { 
-                action: "click->image-viewer#open", 
-                image_viewer_src_param: image_path('guide-world-guide.png')
-              } do %>
-            <%= image_tag 'guide-world-guide.png', class: 'w-full rounded-lg shadow-md border cursor-pointer hover:opacity-80 transition-opacity' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="guide-item border border-black rounded-lg overflow-hidden mb-3 last:mb-0">
-    <div class="guide-header flex justify-between items-center p-4 bg-white text-black text-lg font-bold cursor-pointer hover:bg-gray-100 transition-colors duration-300" data-action="click->before-home-accordion#toggle">
-      キャラクターを作成しよう！
-      <span class="arrow transition-transform duration-300">&#9660;</span>
-    </div>
-    <div class="guide-content p-6 bg-gray-50 border-t border-gray-200" data-before-home-accordion-target="content" style="display:none;">
-      <div class="flex flex-col md:flex-row items-center gap-6">
-        <div class="flex-1 text-gray-700 text-left">
-          <p class="m-0">
-            ○ 「キャラクター」ではそのストーリーの登場人物となる要素を管理できます。<br>
-            追加ボタンを押すことで作成することが可能です。<br>
-            <br>
-            ○ 右図のように作成済みの要素はクリックすることで詳細確認できます。<br>
-            <br>
-            ★ 関連するキャラクター、特徴は複数設定することができます。<br>
-            複数設定することで詳細な人物像を作り上げましょう。<br>
-            <br>
-            ※ 画像をクリックして拡大
-          </p>
-        </div> 
-        <div class="flex-1">
-          <%= link_to "#", data: { 
-                action: "click->image-viewer#open", 
-                image_viewer_src_param: image_path('guide-character.png')
-              } do %>
-            <%= image_tag 'guide-character.png', class: 'w-full rounded-lg shadow-md border cursor-pointer hover:opacity-80 transition-opacity' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="guide-item border border-black rounded-lg overflow-hidden mb-3 last:mb-0">
-    <div class="guide-header flex justify-between items-center p-4 bg-white text-black text-lg font-bold cursor-pointer hover:bg-gray-100 transition-colors duration-300" data-action="click->before-home-accordion#toggle">
-      フラグを作成しよう！
-      <span class="arrow transition-transform duration-300">&#9660;</span>
-    </div>
-    <div class="guide-content p-6 bg-gray-50 border-t border-gray-200" data-before-home-accordion-target="content" style="display:none;">
-      <div class="flex flex-col md:flex-row items-center gap-6">
-        <div class="flex-1 text-gray-700 text-left">
-          <p class="m-0">
-            ○ 「フラグ」ではそのストーリーの伏線となる要素を管理できます。<br>
-            追加ボタンを押すことで作成することが可能です。<br>
-            <br>
-            ○ 右図のように作成済みの要素はクリックすることで詳細確認できます。<br>
-            <br>
-            ○ 右図にも表示されているボックスから現在のフラグの状態（未実装、設置済み※旗マーク、回収済み※チェックマーク）を確認できます。<br>
-            <br>
-            ※ 画像をクリックして拡大
-          </p>
-        </div> 
-        <div class="flex-1">
-          <%= link_to "#", data: { 
-                action: "click->image-viewer#open", 
-                image_viewer_src_param: image_path('guide-flag.png')
-              } do %>
-            <%= image_tag 'guide-flag.png', class: 'w-full rounded-lg shadow-md border cursor-pointer hover:opacity-80 transition-opacity' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="guide-item border border-black rounded-lg overflow-hidden mb-3 last:mb-0">
-    <div class="guide-header flex justify-between items-center p-4 bg-white text-black text-lg font-bold cursor-pointer hover:bg-gray-100 transition-colors duration-300" data-action="click->before-home-accordion#toggle">
-      プロットを作成しよう！
-      <span class="arrow transition-transform duration-300">&#9660;</span>
-    </div>
-    <div class="guide-content p-6 bg-gray-50 border-t border-gray-200" data-before-home-accordion-target="content" style="display:none;">
-      <div class="flex flex-col md:flex-row items-center gap-6">
-        <div class="flex-1 text-gray-700 text-left">
-          <p class="m-0">
-            ○ ストーリー詳細ページにある「プロット」ではそのストーリーの構成を章単位で管理できます。
-            追加ボタンを押すことで作成することが可能です。<br>
-            <br>
-            ○ 右図のように作成済みの各要素を使用し、わかりやすくプロット管理が可能です。※事前に各要素の作成をお願いします。<br>
-            <br>
-            ○ 「構成メモ」では追加した各要素などを参考に、自由にメモ書きなどに使用してください。<br>
-            <br>
-            ○ 作成したプロットを確認しながら、<br>
-            ご自身の物語を書いていきましょう！<br>
-            <br>
-            ※ 画像をクリックして拡大
-          </p>
-        </div> 
-        <div class="flex-1">
-          <%= link_to "#", data: { 
-                action: "click->image-viewer#open", 
-                image_viewer_src_param: image_path('guide-plot.png')
-              } do %>
-            <%= image_tag 'guide-plot.png', class: 'w-full rounded-lg shadow-md border cursor-pointer hover:opacity-80 transition-opacity' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render 'home/guide_items/google_login' %>
+  <%= render 'home/guide_items/create_story' %>
+  <%= render 'home/guide_items/create_world_guide' %>
+  <%= render 'home/guide_items/create_character' %>
+  <%= render 'home/guide_items/create_flag' %>
+  <%= render 'home/guide_items/create_plot' %>
 </div>
+
+<div data-controller="image-viewer" data-image-viewer-target="modalPlaceholder"></div>
