--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-3xl mx-auto">
-    <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-8">キャラクターを編集しよう！</h1>
+    <h1 class="text-center text-3xl md:text-4xl font-bold tracking-tight mt-12 mb-8">キャラクターを編集しよう！</h1>
     <div class="p-8">
       <%= render 'form', story: @story, character: @character %>
     </div>
