--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,6 +1,6 @@
 <% breadcrumb :new_character, @story %>
 <div class="max-w-3xl mx-auto py-12 px-4">
-  <h1 class="text-center text-4xl font-bold tracking-tight mb-12">キャラクターを作成しよう！</h1>
+  <h1 class="text-center text-3xl md:text-4xl font-bold tracking-tight mt-12 mb-8">キャラクターを作成しよう！</h1>
   <div class="p-8">
     <%= render 'form', story: @story, character: @character %>
   </div>
