--- a/app/views/flags/index.html.erb
+++ b/app/views/flags/index.html.erb
@@ -1,42 +1,15 @@
 <% breadcrumb :flags, @story %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-screen-xl mx-auto">
-    <div class="mb-14">
-      <nav class="-mb-px flex justify-center space-x-8" aria-label="Tabs">
-        <a href="<%= story_path(@story) %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg">
-          ストーリー
-        </a>
-        <a href="<%= story_world_guides_path(@story) %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg">
-          ワールドガイド
-        </a>
-        <a href="<%= story_characters_path(@story) %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg">
-          キャラクター
-        </a>
-        <a href="<%= story_flags_path(@story) %>" class="border-black text-black whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg" aria-current="page">
-          フラグ
-        </a>
-      </nav>
-    </div>
+    
+    <%= render 'stories/tab_navigation' %>
 
     <div class="space-y-10">
       <div class="text-center">
         <%= link_to "フラグを作成する", new_story_flag_path(@story), class: "inline-block border border-gray-400 px-8 py-2 rounded-md font-semibold hover:bg-black hover:text-white transition-colors duration-300" %>
       </div>
 
-      <div class="space-y-3 max-w-2xl mx-auto">
-        <% if @flags.any? %>
-          <% @flags.each do |flag| %>
-            <div class="flex items-center gap-6">
-              <%= flag_status_indicator(flag) %>
-              <div class="flex-grow">
-                <%= link_to flag.title, story_flag_path(@story, flag), class: "block w-full text-left px-4 py-2 text-md bg-gray-100 border border-black rounded-full hover:bg-gray-200 transition-colors" %>
-              </div>
-            </div>
-          <% end %>
-        <% else %>
-          <p class="text-center text-gray-500 py-10">まだフラグはありません。</p>
-        <% end %>
-      </div>
+      <%= render 'flags/flag_list', story: @story, flags: @flags %>
     </div>
   </div>
 </div>
