--- a/app/views/stories/_tab_navigation.html.erb
+++ b/app/views/stories/_tab_navigation.html.erb
@@ -1,18 +1,26 @@
+<% active_class = "text-black whitespace-nowrap py-4 px-1 font-semibold text-lg md:border-black md:border-b-2" %>
+<% inactive_class = "text-gray-500 hover:text-gray-700 whitespace-nowrap py-4 px-1 font-semibold text-lg md:border-transparent md:hover:border-gray-400 md:border-b-2" %>
+
 <div class="mb-12">
   <div>
     <nav class="-mb-px flex justify-center space-x-8 overflow-x-auto" aria-label="Tabs">
-      <a href="<%= story_path(@story) %>" class="border-black text-black whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg" aria-current="page">
-        ストーリー
-      </a>
-      <a href="<%= story_world_guides_path(@story) %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg">
-        ワールドガイド
-      </a>
-      <a href="<%= story_characters_path(@story) %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg">
-        キャラクター
-      </a>
-      <a href="<%= story_flags_path(@story) %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-lg">
-        フラグ
-      </a>
+      
+      <%# controller_nameが"stories"の時だけアクティブにする %>
+      <%= link_to "ストーリー", story_path(@story), 
+            class: (controller_name == 'stories' ? active_class : inactive_class) %>
+
+      <%# controller_nameが"world_guides"の時だけアクティブにする %>
+      <%= link_to "ワールドガイド", story_world_guides_path(@story), 
+            class: (controller_name == 'world_guides' ? active_class : inactive_class) %>
+      
+      <%# controller_nameが"characters"の時だけアクティブにする %>
+      <%= link_to "キャラクター", story_characters_path(@story),
+            class: (controller_name == 'characters' ? active_class : inactive_class) %>
+
+      <%# controller_nameが"flags"の時だけアクティブにする %>
+      <%= link_to "フラグ", story_flags_path(@story),
+            class: (controller_name == 'flags' ? active_class : inactive_class) %>
+            
     </nav>
   </div>
 </div>
