--- a/app/views/world_guides/edit.html.erb
+++ b/app/views/world_guides/edit.html.erb
@@ -1,7 +1,7 @@
 <% breadcrumb :edit_world_guide, @story, @world_guide %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-xl mx-auto">
-    <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-8">ワールドガイドを編集しよう！</h1>
+    <h1 class="text-center text-3xl md:text-4xl font-bold tracking-tight mt-12 mb-8">ワールドガイドを編集しよう！</h1>
     <div class="p-8">
       <%= render 'form', story: @story, world_guide: @world_guide %>
     </div>
