--- a/app/views/world_guides/show.html.erb
+++ b/app/views/world_guides/show.html.erb
@@ -1,9 +1,9 @@
 <% breadcrumb :world_guide, @story, @world_guide %>
 <div class="px-4 sm:px-6 lg:px-8 py-8 ">
   <div class="max-w-screen-xl mx-auto">
-    <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-14">ワールドガイドを確認しよう！</h1>
+    <h1 class="text-center text-3xl md:text-4xl font-bold tracking-tight mt-12 mb-14">ワールドガイドを確認しよう！</h1>
 
-    <div class="flex justify-center items-center gap-4 mb-12">
+    <div class="flex flex-col sm:flex-row items-center justify-center gap-4 mb-12">
       <%= link_to "ワールドガイドを編集する", edit_story_world_guide_path(@story, @world_guide), class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
       <%= link_to "ワールドガイドを削除する", "#",
             class: "border border-gray-400 px-8 py-3 rounded-md font-semibold hover:bg-red-500 hover:text-white",
@@ -16,37 +16,11 @@
             } %>
     </div>
     
-    <div class="max-w-3xl mx-auto space-y-6 border-2 border-glay p-8 rounded-lg">
-      <div>
-        <p class="font-bold">【世界名】</p>
-        <p class="text-xl ml-4 mt-2"><%= @world_guide.world_name %></p>
-      </div>
-      <div>
-        <p class="font-bold">【国名】</p>
-        <p class="text-xl ml-4 mt-2"><%= @world_guide.country_name %></p>
-      </div>
-      <div>
-        <p class="font-bold">【地域名】</p>
-        <p class="text-xl ml-4 mt-2"><%= @world_guide.region_name %></p>
-      </div>
-      <div>
-        <p class="font-bold">【特徴】</p>
-        <div class="flex flex-wrap gap-3 mt-4 ml-4">
-          <% @world_guide.world_guide_features.each do |feature| %>
-            <span class="px-3 py-1 text-md bg-gray-100 border border-black rounded-full">
-              <%= feature.world_feature_category.name %> / <%= feature.explanation %>
-            </span>
-          <% end %>
-        </div>
-      </div>
-      <div>
-        <p class="font-bold">【イメージ画像】</p>
-        <p class="text-xl ml-4 mt-2">なし</p>
-      </div>
-    </div>
-    
+    <%= render 'world_guides/details' %>
+
     <div class="text-center mt-12">
       <%= link_to "ワールドガイド一覧に戻る", story_world_guides_path(@story), class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
     </div>
   </div>
 </div>
+
