update-カプセル化

--- a/app/views/plots/_plot.html.erb
+++ b/app/views/plots/_plot.html.erb
@@ -55,8 +55,8 @@
         <% end %>
 
         <div>
-          <p class="font-bold mt-8 mb-2">【構成メモ】</p>
-          <div class="ml-4 mt-1 mb-16 text-gray-700 prose max-w-none">
+          <p class="font-bold mt-6 ">【構成メモ】</p>
+          <div class="ml-4 mt-2 mb-16 text-gray-700 prose max-w-none leading-relaxed">
             <%= simple_format(plot.content) %>
           </div>
         </div>
