--- a/app/views/plots/form_parts/_flag_selector.html.erb
+++ b/app/views/plots/form_parts/_flag_selector.html.erb
@@ -1,7 +1,7 @@
 <div data-controller="plot-flag-form">
   <label class="block text-lg font-bold">フラグ</label>
-  <div class="flex flex-col sm:flex-row items-center gap-2 mt-1">
-    <select data-plot-flag-form-target="select" class="flex-grow block px-3 py-2 border border-black rounded-md shadow-sm">
+  <div class="flex flex-col sm:flex-row items-stretch gap-2 mt-1 sm:border-none sm:rounded-none sm:p-0 border border-black rounded-lg p-4">
+    <select data-plot-flag-form-target="select" class="flex-grow block px-3 h-10 border border-black rounded-md shadow-sm">
       <option value="">プロットで扱うフラグを選択</option>
       <% @flags_for_select.each do |flag| %>
         <option value="<%= flag.id %>" data-is-created="<%= flag.already_created_in_story? %>">
@@ -9,11 +9,11 @@
         </option>
       <% end %>
     </select>
-    <button type="button" data-action="click->plot-flag-form#add" class="w-full sm:w-auto flex-shrink-0 border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-black hover:text-white">追加</button>
+    <button type="button" data-action="click->plot-flag-form#add" class="w-full sm:w-auto flex-shrink-0 border border-gray-400 px-4 h-10 rounded-md font-semibold hover:bg-black hover:text-white">追加</button>
   </div>
-  <div data-plot-flag-form-target="flashContainer" class="mt-2"></div>
+  <div data-plot-flag-form-target="flashContainer" class="mt-6"></div>
 
-  <div data-plot-flag-form-target="container" class="mt-2 space-y-2">
+  <div data-plot-flag-form-target="container" class="space-y-4">
     <%= f.fields_for :plot_flags do |pf| %>
       <div class="nested-flag-fields flex items-center gap-3 p-2 border rounded-md bg-gray-50">
         <span class="flex-grow font-semibold" data-role="flag-name"><%= pf.object.flag.title %></span>
