--- a/app/views/stories/_details.html.erb
+++ b/app/views/stories/_details.html.erb
@@ -1,22 +1,22 @@
 <div class="border-2 rounded-lg p-8 border-glay">
   <div class="mb-6">
     <p class="font-bold text-lg mb-4">【 タイトル 】</p>
-    <p class="text-xl ml-4 break-all"><%= @story.title %></p>
+    <p class="font-bold text-xl ml-4 break-all"><%= @story.title %></p>
   </div>
 
   <div class="mb-6">
     <p class="font-bold text-lg mb-4">【 ジャンル 】</p>
-    <p class="text-xl ml-4"><%= t("activerecord.attributes.story.genres.#{@story.genre}") %></p>
+    <p class="ml-4"><%= t("activerecord.attributes.story.genres.#{@story.genre}") %></p>
   </div>
 
   <div class="mb-6">
     <p class="font-bold text-lg mb-4">【 テーマ 】</p>
-    <p class="text-xl ml-4"><%= @story.thema %></p>
+    <p class="ml-4"><%= @story.thema %></p>
   </div>
 
   <div class="mb-6">
     <p class="font-bold text-lg mb-4">【 あらすじ 】</p>
-    <div class="text-xl ml-4 mb-20 break-all"><%= simple_format(@story.synopsis) %></div>
+    <div class="ml-4 mb-20 break-all leading-relaxed"><%= simple_format(@story.synopsis) %></div>
   </div>
 
   <div class="flex justify-center mt-8">
