fix-バリデーションエラーで特徴削除

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -1,6 +1,14 @@
 <%= form_with model: [story, character], local: true, class: "space-y-8" do |f| %>
   <%= render 'characters/forms/error_messages', character: character %>
 
+  <% if character.errors.any? %>
+    <div id="form-validation-error-trigger" 
+         class="hidden"
+         data-features="<%= character.character_features.to_json(only: [:id, :character_feature_category_id, :explanation]) %>"
+         data-relationships="<%= character.relationships.to_json(only: [:id, :related_character_id, :relationship_type]) %>">
+    </div>
+  <% end %>
+
   <%= render 'characters/forms/basic_info_fields', f: f %>
 
   <%= render 'characters/forms/location_fields', f: f, world_guides: @world_guides %>
