--- a/app/views/world_guides/_feature_fields.html.erb
+++ b/app/views/world_guides/_feature_fields.html.erb
@@ -1,20 +1,20 @@
-<div>
+<div data-controller="nested-form" data-form-type="worldGuideFeatures" data-nested-form-modal-title-value="特徴の削除" data-nested-form-modal-message-value="この特徴を削除しますか？">
   <p class="block text-lg font-bold mb-2">特徴</p>
 
-  <div class="border rounded-lg p-4 mb-4 space-y-2">
+  <div class="border rounded-lg p-4 mb-2 space-y-2">
     <select data-nested-form-target="inputType" class="block w-full px-3 py-2 border border-black rounded-md">
       <option value="">特徴を選択してください。</option>
-      <% WorldFeatureCategory.all.each do |category| %>
+      <% @feature_categories.each do |category| %>
         <option value="<%= category.id %>" data-name="<%= category.name %>"><%= category.name %></option>
       <% end %>
     </select>
     <input type="text" data-nested-form-target="inputExplanation" class="block w-full px-3 py-2 border border-black rounded-md" placeholder="25文字以内で説明を記入してください。" maxlength="25">
     <button type="button" data-action="click->nested-form#add" class="border border-gray-400 w-full py-2 rounded-md font-semibold hover:bg-black hover:text-white transition-colors duration-300">特徴を追加</button>
   </div>
-    
+  
   <div data-nested-form-target="flashContainer" class="mb-4"></div>
 
-  <div data-nested-form-target="container" class="flex flex-wrap gap-2">
+  <div class="flex flex-wrap gap-2">
     <%= f.fields_for :world_guide_features do |feature_form| %>
       <% unless feature_form.object.new_record? %>
         <div class="nested-fields-wrapper inline-flex items-center gap-2 px-3 py-1 text-md bg-gray-100 border border-black rounded-full cursor-pointer" data-action="click->nested-form#remove">
@@ -25,18 +25,20 @@
         </div>
       <% end %>
     <% end %>
-  </div>
-</div>
 
-<template data-nested-form-target="template">
-  <div class="nested-fields-wrapper inline-flex items-center gap-2 px-3 py-1 text-semimd bg-gray-100 border border-black rounded-full cursor-pointer" data-action="click->nested-form#remove" data-new-record="true">
-    <span data-nested-form-target="capsuleText"></span>
-    <span class="text-xs text-red-500 font-bold">×</span>
-      
-        <%= f.fields_for :world_guide_features, WorldGuideFeature.new, child_index: 'NEW_RECORD' do |ff| %>
-      <%= ff.hidden_field :world_feature_category_id, data: { nested_form_target: "hiddenCategoryId" } %>
-      <%= ff.hidden_field :explanation, data: { nested_form_target: "hiddenExplanation" } %>
-      <%= ff.hidden_field :_destroy %>
-    <% end %>
+    <div data-nested-form-target="container" class="contents"></div>
   </div>
-</template>
+
+  <template data-nested-form-target="template">
+    <div class="nested-fields-wrapper inline-flex items-center gap-2 px-3 py-1 text-semimd bg-gray-100 border border-black rounded-full cursor-pointer" data-action="click->nested-form#remove" data-new-record="true">
+      <span data-nested-form-target="capsuleText"></span>
+      <span class="text-xs text-red-500 font-bold">×</span>
+      <%= f.fields_for :world_guide_features, WorldGuideFeature.new, child_index: 'NEW_RECORD' do |ff| %>
+        <%= ff.hidden_field :world_feature_category_id, data: { nested_form_target: "hiddenCategoryId" } %>
+        <%= ff.hidden_field :explanation, data: { nested_form_target: "hiddenExplanation" } %>
+        <%= ff.hidden_field :_destroy %>
+      <% end %>
+    </div>
+  </template>
+  <div data-nested-form-target="modalPlaceholder"></div>
+</div>
