fix-プロットの視認性向上

--- a/app/views/characters/_category_section.html.erb
+++ b/app/views/characters/_category_section.html.erb
@@ -1,4 +1,4 @@
-<% category_name = t("enums.character.category.#{category_key}") %>
+<% category_name = category_key %>
 <div>
   <div class="flex items-center gap-8 mb-8">
     <h2 class="text-3xl font-bold border-l-8 border-black pl-4"><%= category_name %></h2>
