--- a/app/views/characters/details/_info_field.html.erb
+++ b/app/views/characters/details/_info_field.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <p class="font-bold">【<%= title %>】</p>
-  <p class=" ml-4 mt-2"><%= content.presence || "未設定" %></p>
+  <p class="text-xl font-bold">【<%= title %>】</p>
+  <p class="text-xl ml-4 mt-2"><%= content.presence || "未設定" %></p>
 </div>
