--- a/app/views/characters/details/_location_info.html.erb
+++ b/app/views/characters/details/_location_info.html.erb
@@ -2,7 +2,11 @@
   <p class="font-bold">【<%= title %>】</p>
   <div class="ml-4 mt-4 gap-3">
     <% if location %>
-      <%= link_to location.country_and_region, story_world_guide_path(story, location), class: "inline-block px-3 py-1 text-md bg-gray-100 border border-black rounded-full hover:bg-gray-200" %>
+      <%= link_to story_world_guide_path(story, location), class: "inline-flex items-stretch gap-x-2 px-3 py-1 text-md bg-gray-100 border border-black rounded-full hover:bg-gray-200" do %>
+        <span class="flex items-center"><%= location.category %></span>
+        <span class="border-l border-gray-700"></span>
+        <span class="flex items-center"><%= location.country_and_region %></span>
+      <% end %>
     <% else %>
       <p>未設定</p>
     <% end %>
