--- a/app/views/plots/form_parts/_character_selector.html.erb
+++ b/app/views/plots/form_parts/_character_selector.html.erb
@@ -1,11 +1,13 @@
 <div data-controller="multi-select"
-  data-multi-select-duplicate-message-value="すでに追加されています。同じキャラクターは複数追加できません。">
+     data-multi-select-duplicate-message-value="すでに追加されています。同じキャラクターは複数追加できません。">
   <label class="block text-lg font-bold">キャラクター</label>
   <div class="flex flex-col sm:flex-row items-stretch gap-2 mt-1 sm:border-none sm:rounded-none sm:p-0 border border-black rounded-lg p-4">
     <select data-multi-select-target="select" class="flex-grow block px-3 h-10 border border-black rounded-md shadow-sm">
       <option value="">登場するキャラクターを選択</option>
       <% @characters.each do |char| %>
-        <option value="<%= char.id %>" data-name="<%= char.name %>"><%= char.name %></option>
+        <option value="<%= char.id %>" data-name="<%= char.name %>" data-category="<%= char.category %>">
+          <%= char.category %> : <%= char.name %>
+        </option>
       <% end %>
     </select>
     <button type="button" data-action="multi-select#add" class="w-full sm:w-auto flex-shrink-0 border border-gray-400 px-4 h-10 rounded-md font-semibold hover:bg-black hover:text-white">追加</button>
@@ -13,17 +15,21 @@
   <div data-multi-select-target="flashContainer" class="mt-4"></div>
   <div data-multi-select-target="container" class="flex flex-wrap gap-2 mt-4 mb-4">
     <% plot.characters.each do |char| %>
-      <div class="capsule inline-flex items-center gap-2 px-3 py-1 text-md bg-gray-100 border border-black rounded-full">
-        <span><%= char.name %></span>
-        <button type="button" data-action="multi-select#remove" class="text-red-500 hover:text-red-700 font-bold">×</button>
+      <div class="capsule inline-flex items-stretch gap-x-2 px-3 py-1 text-md bg-gray-100 border border-black rounded-full">
+        <span class="flex items-center"><%= char.category %></span>
+        <span class="border-l border-gray-700"></span>
+        <span class="flex items-center"><%= char.name %></span>
+        <button type="button" data-action="multi-select#remove" class="text-red-500 hover:text-red-700 font-bold ml-1">×</button>
         <input type="hidden" name="plot[character_ids][]" value="<%= char.id %>">
       </div>
     <% end %>
   </div>
   <template data-multi-select-target="template">
-    <div class="capsule inline-flex items-center gap-2 px-3 py-1 text-md bg-gray-100 border border-black rounded-full">
-      <span data-multi-select-target="name"></span>
-      <button type="button" data-action="multi-select#remove" class="text-red-500 hover:text-red-700 font-bold">×</button>
+    <div class="capsule inline-flex items-stretch gap-x-2 px-3 py-1 text-md bg-gray-100 border border-black rounded-full">
+      <span data-multi-select-target="category" class="flex items-center"></span>
+      <span class="border-l border-gray-700"></span>
+      <span data-multi-select-target="name" class="flex items-center"></span>
+      <button type="button" data-action="multi-select#remove" class="text-red-500 hover:text-red-700 font-bold ml-1">×</button>
       <input type="hidden" name="plot[character_ids][]" data-multi-select-target="value">
     </div>
   </template>
