--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,14 +4,19 @@
   <div class="service-description text-center leading-relaxed text-black font-normal mb-12 max-w-2xl w-full">
     <p class="mb-4 text-base md:text-lg">
       「Historia (ヒストリア)」は、<br>
-      情報管理の側面から作家が物語の一貫性を維持し、<br>
-      創作活動を継続できるよう支援するWebアプリケーションです。
+      作家が物語の一貫性を維持し創作活動を継続できるように<br>
+      設定管理の側面から支援するWebアプリケーションです。
+    </p>
+    <p class="mb-4 text-base md:text-lg">
+      物語を書き進めていくと、登場人物や世界観、<br>
+      ストーリー展開、伏線といった設定に関する情報は<br>
+      管理が困難なほど膨大になり、煩雑化していくと思います。<br>
     </p>
     <p class="text-base md:text-lg">
-      物語を書き進める中で生じる、登場人物や世界観の設定、<br>
-      複雑なストーリー展開、伏線といった情報を<br>
-      見やすく管理することで情報の煩雑化を防ぎ、<br>
-      完結まで継続して執筆できるよう情報整理をお手伝いします。
+      そこで、「Historia」は膨大になった設定という名の「物語の歴史」を<br>
+      一目でわかるように管理することで情報の煩雑化を防ぎます。<br>
+      情報管理に割く時間を抑え、割けた時間を執筆時間に充てる。<br>
+      そういった執筆環境の改善を目指し、皆さんの情報整理をお手伝いします。
     </p>
   </div>
 
