--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,7 @@
 <div class="main-content flex flex-col items-center max-w-4xl mx-auto font-bold px-5 py-2 min-h-[calc(100vh-150px)]">
-  <h1 class="text-4xl md:text-5xl mt-10 mb-16 md:mb-20 text-black">Historiaへようこそ！</h1>
-
-  <div class="service-description text-center leading-relaxed text-black font-normal mb-12 max-w-2xl w-full">
-    <p class="mb-4 text-base md:text-lg">
-      「Historia (ヒストリア)」は、<br>
-      作家が物語の一貫性を維持し創作活動を継続できるように<br>
-      設定管理の側面から支援するWebアプリケーションです。
-    </p>
-    <p class="mb-4 text-base md:text-lg">
-      物語を書き進めていくと、登場人物や世界観、<br>
-      ストーリー展開、伏線といった設定に関する情報は<br>
-      管理が困難なほど膨大になり、煩雑化していくと思います。<br>
-    </p>
-    <p class="text-base md:text-lg">
-      そこで、「Historia」は膨大になった設定という名の「物語の歴史」を<br>
-      一目でわかるように管理することで情報の煩雑化を防ぎます。<br>
-      情報管理に割く時間を抑え、割けた時間を執筆時間に充てる。<br>
-      そういった執筆環境の改善を目指し、皆さんの情報整理をお手伝いします。
-    </p>
+  
+  <div class="service-description text-center mb-12 max-w-2xl w-full">
+    <%= image_tag asset_path("home.png"), class: "w-full h-auto " %>
   </div>
 
   <%= render 'home/guide' %>
