update-文字を小さく

--- a/app/views/home/_guide.html.erb
+++ b/app/views/home/_guide.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-2xl mb-4 text-black">使い方ガイド</h2>
+<h2 class="text-xl md:text-2xl mb-4 text-black">使い方ガイド</h2>
 
 <div class="guide-sections w-11/12 max-w-2xl mb-8" data-controller="before-home-accordion">
   <%= render 'home/guide_items/google_login' %>
